Added Typhlosion data, Torchic data. Some Combusken and Blaziken data. Unfilled-in skill blanks for everything, too.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -719,48 +719,47 @@ egg_groups = Field
 gender_ratio_m = 87.5
 family = Cyndaquil,Quilava,Typhlosion
 capabilities = Overland:9,Swim:5,High Jump:2,Long Jump:2,Power:6,Firestarter,Heater,Glow,Naturewalk:Grassland
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = 
-level_moves = 
+height = 5'7",1.7m
+height_class = Medium
+weight = 175.3 lbs.,79.4kg
+weight_class = 4
+skills = Athletics:5d6+2,Acrobatics:3d6,Combat:4d6+1,Stealth:4d6+3,Perception:4d6+3,Focus:4d6
+level_moves = 6:Smokescreen,10:Ember,13:Quick Attack,20:Flame Wheel,24:Defense Curl,31:Swift,35:Flame Charge,43:Lava Plume,48:Flamethrower,56:Inferno,61:Rollout,69:Double-Edge,74:Eruption
 hm_moves = Cut,Strength
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+tm_moves = Roar,Toxic,Hidden Power,Sunny Day,Hyper Beam,Protect,Frustration,Solar Beam,Earthquake,Return,Dig,Brick Break,Double Team,Flamethrower,Fire Blast,Rock Tomb,Aerial Ace,Facade,Flame Charge,Rest,Attract,Round,Overheat,Focus Blast,Fling,Incinerate,Will-O-Wisp,Shadow Claw,Giga Impact,Gyro Ball,Bulldoze,Rock Slide,Swagger,Sleep Talk,Substitute,Wild Charge,Rock Smash,Power-Up Punch,Confide
+tutor_moves = Blast Burn,Body Slam,Counter,Covet,Dynamic Punch,Fire Pledge,Fire Punch,Focus Punch,Fury Cutter,Gyro Ball(N),Heat Wave,Mega Kick,Mega Punch,Low Kick,Mud-Slap,Rollout,Seismic Toss,Sleep Talk,Snore,Swift,Thunder Punch
 [Torchic]
 page = 36
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+base_hp = 5
+base_attack = 6
+base_defense = 4
+base_special_attack = 7
+base_special_defense = 5
+base_speed = 5
+types = Fire
+basic_abilities = Blaze,Klutz
+advanced_abilities = Speed Boost,Tangled Feet
+high_ability = Moxie
+evolutions = Combusken,15
 minimum_level = 1
-diets = 
-habitats = 
-egg_groups = 
+diets = Herbivore
+habitats = Grassland
+egg_groups = Field
 gender_ratio_m = 87.5
 average_hatch_rate_days = 10
-family = 
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = 
-level_moves = 
+family = Torchic,Combusken,Blaziken
+capabilities = Overland:6,Swim:3,High Jump:1,Long Jump:2,Power:1,Heater,Naturewalk:Grassland,Underdog
+height = 1'4",0.4m
+height_class = Small
+weight = 5.5 lbs.,2.5kg
+weight_class = 1
+skills = Athletics:2d6,Acrobatics:3d6+3,Combat:2d6,Stealth:3d6,Perception:2d6,Focus:1d6
+level_moves = 1:Growl,1:Scratch,5:Ember,10:Sand Attack,14:Peck,19:Fire Spin,23:Quick Attack,28:Flame Burst,32:Focus Energy,37:Slash,41:Mirror Move,46:Flamethrower
 hm_moves = Cut,Strength
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+tm_moves = Hone Claws,Toxic,Hidden Power,Sunny Day,Protect,Frustration,Return,Dig,Double Team,Flamethrower,Fire Blast,Rock Tomb,Aerial Ace,Facade,Flame Charge,Rest,Attract,Round,Echoed Voice,Overheat,Incinerate,Will-O-Wisp,Shadow Claw,Swords Dance,Rock Slide,Swagger,Sleep Talk,Substitute,Rock Smash,Power-Up Punch,Confide
+egg_moves = Agility,Baton Pass,Counter,Crush Claw,Curse,Endure,Feather Dance,Feint,Flame Burst,Last Resort,Low Kick,Night Slash,Reversal,Rock Slide,Smelling Salts,Swagger
+tutor_moves = Body Slam,Bounce,Double-Edge,Heat Wave,Helping Hand,Fire Pledge,Last Resort,Low Kick,Mega Kick,Mega Punch,Mud-Slap,Seismic Toss,Sleep Talk,Snore,Swift
 [Combusken]
 page = 37
 legendary = False
@@ -778,15 +777,15 @@ evolutions =
 minimum_level = 15
 diets = 
 habitats = 
-egg_groups = 
+egg_groups = Field
 gender_ratio_m = 87.5
-family = 
+family = Torchic,Combusken,Blaziken
 capabilities = 
 height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Strength
 tm_moves = 
@@ -806,18 +805,18 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 30
+minimum_level = 35
 diets = 
 habitats = 
-egg_groups = 
+egg_groups = Field
 gender_ratio_m = 87.5
-family = 
+family = Torchic,Combusken,Blaziken
 capabilities = 
 height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Strength
 tm_moves = 
@@ -849,7 +848,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Strength
 tm_moves = 
@@ -880,7 +879,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Strength
 tm_moves = 
@@ -911,7 +910,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Strength
 tm_moves = 
@@ -943,7 +942,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Strength
 tm_moves = 
@@ -974,7 +973,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Strength
 tm_moves = 
@@ -1005,7 +1004,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Strength
 tm_moves = 
@@ -1037,7 +1036,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut
 tm_moves = 
@@ -1068,7 +1067,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut
 tm_moves = 
@@ -1099,7 +1098,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut
 tm_moves = 
@@ -1131,7 +1130,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -1162,7 +1161,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -1192,7 +1191,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -1224,7 +1223,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Waterfall,Dive
 tm_moves = 
@@ -1255,7 +1254,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -1285,7 +1284,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -1319,7 +1318,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -1352,7 +1351,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -1385,7 +1384,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -1419,7 +1418,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Waterfall,Dive
 tm_moves = 
@@ -1452,7 +1451,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -1485,7 +1484,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -1519,7 +1518,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Waterfall,Dive
 tm_moves = 
@@ -1552,7 +1551,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Waterfall,Dive
 tm_moves = 
@@ -1585,7 +1584,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -1619,7 +1618,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Strength,Waterfall
 tm_moves = 
@@ -1652,7 +1651,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Strength,Waterfall
 tm_moves = 
@@ -1685,7 +1684,7 @@ height_class =
 weight = 
 weight_metric = 
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut,Surf,Strength,Waterfall
 tm_moves = 
@@ -1717,7 +1716,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Fly
 tm_moves = 
@@ -1748,7 +1747,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Fly
 tm_moves = 
@@ -1778,7 +1777,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Fly
 tm_moves = 
@@ -1810,7 +1809,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut
 tm_moves = 
@@ -1841,7 +1840,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut
 tm_moves = 
@@ -1871,7 +1870,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut
 tm_moves = 
@@ -1901,7 +1900,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut
 tm_moves = 
@@ -1933,7 +1932,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 tm_moves = 
 egg_moves = 
@@ -1963,7 +1962,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Strength
 tm_moves = 
@@ -1993,7 +1992,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Strength
 tm_moves = 
@@ -2079,7 +2078,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = 
 tm_moves = 
@@ -2109,7 +2108,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Surf,Strength,Waterfall,Dive
 tm_moves = 
@@ -2139,7 +2138,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Strength
 tm_moves = 
@@ -2169,7 +2168,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Strength
 tm_moves = 
@@ -2199,7 +2198,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut
 tm_moves = 
@@ -2229,7 +2228,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Cut
 tm_moves = 
@@ -2259,7 +2258,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Strength
 tm_moves = 
@@ -2289,7 +2288,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 hm_moves = Strength
 tm_moves = 
@@ -2319,7 +2318,7 @@ height = ,
 height_class = 
 weight = ,
 weight_class = 
-skills = 
+skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 level_moves = 
 tm_moves = 
 egg_moves = 
@@ -2350,7 +2349,7 @@ tutor_moves =
 ; height_class = 
 ; weight = 
 ; weight_class = 
-; skills = 
+; skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
 ; level_moves = 
 ; hm_moves = 
 ; tm_moves = 
