Added Combusken, Blaziken types.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -769,7 +769,7 @@ base_defense =
 base_special_attack = 
 base_special_defense = 
 base_speed = 
-types = 
+types = Fire,Fighting
 basic_abilities = 
 advanced_abilities = 
 high_ability = 
@@ -800,7 +800,7 @@ base_defense =
 base_special_attack = 
 base_special_defense = 
 base_speed = 
-types = 
+types = Fire,Fighting
 basic_abilities = 
 advanced_abilities = 
 high_ability = 
@@ -2095,7 +2095,7 @@ base_special_defense = 10
 base_speed = 7
 types = Water
 basic_abilities = Water Absorb,Swift Swim
-advanced_abilities = Type Arua (Water),Hydration
+advanced_abilities = Type Aura (Water),Hydration
 high_ability = Wash Away
 minimum_level = 1
 diets = Omnivore
