Added Combusken data.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -763,34 +763,33 @@ tutor_moves = Body Slam,Bounce,Double-Edge,Heat Wave,Helping Hand,Fire Pledge,La
 [Combusken]
 page = 37
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
+base_hp = 6
+base_attack = 9
+base_defense = 6
+base_special_attack = 9
+base_special_defense = 6
+base_speed = 6
 types = Fire,Fighting
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+basic_abilities = Blaze,Klutz
+advanced_abilities = Speed Boost,Tangled Feet
+high_ability = Moxie
+evolutions = Blaziken,30
 minimum_level = 15
-diets = 
-habitats = 
+diets = Omnivore
+habitats = Grassland
 egg_groups = Field
 gender_ratio_m = 87.5
 family = Torchic,Combusken,Blaziken
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+capabilities = Overland:8,Swim:3,High Jump:2,Long Jump:2,Power:4,Firestarter,Heater,Naturewalk:Grassland,Underdog
+height = 2'11",0.9m
+height_class = Small
+weight = 43.0 lbs.,19.5kg
+weight_class = 2
+skills = Athletics:3d6+3,Acrobatics:4d6+3,Combat:3d6+2,Stealth:3d6,Perception:2d6,Focus:3d6
+level_moves = 5:Ember,10:Sand Attack,14:Peck,16:Double Kick,20:Flame Charge,25:Quick Attack,31:Bulk Up,36:Focus Energy,42:Slash,47:Mirror Move,53:Sky Uppercut,58:Flare Blitz
 hm_moves = Cut,Strength
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+tm_moves = Hone Claws,Toxic,Bulk Up,Hidden Power,Sunny Day,Protect,Frustration,Return,Dig,Brick Break,Double Team,Flamethrower,Fire Blast,Rock Tomb,Aerial Ace,Facade,Flame Charge,Rest,Attract,Low Sweep,Round,Echoed Voice,Overheat,Focus Blast,Fling,Incinerate,Will-O-Wisp,Shadow Claw,Swords Dance,Rock Slide,Poison Jab,Swagger,Sleep Talk,Substitute,Rock Smash,Power-Up Punch,Confide
+tutor_moves = Body Slam,Bounce,Counter,Double-Edge,Dual Chop,Dynamic Punch,Fire Pledge,Fire Punch,Focus Punch,Fury Cutter,Heat Wave,Helping Hand,Last Resort,Low Kick,Mega Kick,Mega Punch,Mud-Slap,Seismic Toss,Sleep Talk,Snore,Swift,Thunder Punch,Vacuum Wave,Work Up
 [Blaziken]
 page = 38
 legendary = False
