--- a/pokemon.ini
+++ b/pokemon.ini
@@ -793,34 +793,32 @@ tutor_moves = Body Slam,Bounce,Counter,Double-Edge,Dual Chop,Dynamic Punch,Fire 
 [Blaziken]
 page = 38
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
+base_hp = 8
+base_attack = 12
+base_defense = 7
+base_special_attack = 11
+base_special_defense = 7
+base_speed = 8
 types = Fire,Fighting
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+basic_abilities = Blaze, Klutz
+advanced_abilities = Speed Boost, Tangled Feet
+high_ability = Moxie
 minimum_level = 35
-diets = 
-habitats = 
+diets = Omnivore
+habitats = Grassland
 egg_groups = Field
 gender_ratio_m = 87.5
 family = Torchic,Combusken,Blaziken
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
+capabilities = Overland:10, Swim:4, High Jump:3, Long Jump:4, Power:7, Firestarter, Naturewalk: Grassland, Heater
+height = 6'3",1.9m
+height_class = Medium
+weight = 114.6 lbs.,52.0kg
+weight_class = 4
 skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+level_moves = 5:Ember, 10:Sand Attack, 14:Peck, 16:Double Kick, 20:Flame Charge, 25:Quick Attack, 31:Bulk Up, 36:Blaze Kick, 37:Focus Energy, 44:Slash, 50:Brave Bird, 57:Sky Uppercut, 63:Flare Blitz
 hm_moves = Cut,Strength
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+tm_moves = Hone Claws, Roar, Toxic, Bulk Up, Hidden Power, Sunny Day, Hyper Beam, Protect, Frustration, Solar Beam, Earthquake, Return, Dig, Brick Break, Double Team, Flamethrower, Fire Blast, Rock Tomb, Aerial Ace, Facade, Flame Charge, Rest, Attract, Low Sweep, Round, Echoed Voice, Overheat, Focus Blast, Fling, Incinerate, Will-O-Wisp, Acrobatics, Shadow Claw, Giga Impact, Stone Edge, Swords Dance, Bulldoze, Rock Slide, Poison Jab, Swagger, Sleep Talk, Substitute, Rock Smash, Power-Up Punch, Confide
+tutor_moves = Blast Burn, Body Slam, Bounce, Counter, Double-Edge, Dual Chop, Dynamic Punch, Fire Pledge, Fire Punch(N), Focus Punch, Fury Cutter, Heat Wave, Helping Hand, High Jump Kick (N), Knock Off, Last Resort, Low Kick, Magic Coat, Mega Kick, Mega Punch, Mirror Move, Mud-Slap, Rock Climb, Role Play, Seismic Toss, Sleep Talk, Snore, Superpower, Swift, Thunder Punch, Vacuum Wave, Work Up
 [Chimchar]
 page = 39
 legendary = False
