Finished adding details for fire-type starters.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1,5 +1,6 @@
 ; Pokedex isn't consistent on spelling of Naturewalk terrains, both within the Capabilities section and compared to the Habitat section
 ; Naturewalk:Grassland
+; Based on Playtest 1.05+ Pokedex
 [Bulbasaur]
 page = 12
 legendary = False
@@ -822,281 +823,277 @@ tutor_moves = Blast Burn, Body Slam, Bounce, Counter, Double-Edge, Dual Chop, Dy
 [Chimchar]
 page = 39
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+base_hp = 4
+base_attack = 6
+base_defense = 4
+base_special_attack = 6
+base_special_defense = 4
+base_speed = 6
+types = Fire
+basic_abilities = Blaze, Pickup
+advanced_abilities = Decoy, Iron Fist
+high_ability = Celebrate
+evolutions = Monferno,15
 minimum_level = 1
-diets = 
-habitats = 
-egg_groups = 
+diets = Omnivore
+habitats = Cave, Mountain
+egg_groups = Field, Humanshape
 gender_ratio_m = 87.5
 average_hatch_rate_days = 10
-family = 
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+family = Chimchar, Monferno, Infernape
+capabilities = Overland:5, Swim:3, High Jump:1, Long Jump:2, Power:2, Firestarter, Glow, Naturewalk:Forest, Naturewalk:Mountain, Underdog
+height = 1'8",0.5m
+height_class = Small
+weight = 13.7 lbs.,6.2kg
+weight_class = 1
+skills = Athletics:3d6+2,Acrobatics:3d6+2,Combat:2d6,Stealth:3d6+2,Perception:3d6,Focus:1d6
+level_moves = 1:Leer, 1:Scratch, 7:Ember, 9:Taunt, 15:Fury Swipes, 17:Flame Wheel, 23:Nasty Plot, 25:Torment, 31:Facade, 33:Fire Spin, 39:Acrobatics, 41:Slack Off, 47:Flamethrower
 hm_moves = Cut,Strength
-tm_moves = 
+tm_moves = Hone Claws, Toxic, Bulk Up, Hidden Power, Sunny Day, Taunt, Protect, Frustration, Return, Dig, Brick Break, Double Team, Flamethrower, Fire Blast, Aerial Ace, Torment, Facade, Flame Charge, Rest, Attract, Low Sweep, Round, Overheat, Fling, Incinerate, Will-O-Wisp, Acrobatics, Shadow Claw, Swords Dance, Grass Knot, Swagger, Sleep Talk, U-Turn, Substitute, Rock Smash, Power-Up Punch, Confide
 egg_moves = Assist, Blaze Kick, Counter, Double Kick, Encore, Fake Out, Quick Guard, Fire Punch, Focus Energy, Focus Punch, Heat Wave, Helping Hand, Submission, Thunder Punch
 tutor_moves = Covet, Endeavor, Fire Pledge, Fire Punch, Gunk Shot, Heat Wave, Helping Hand, Iron Tail, Low Kick, Magic Coat, Mud-Slap, Rock Climb, Role Play, Rollout, Sleep Talk, Snore, Stealth Rock, Swift,
 Thunder Punch, Uproar, Vacuum Wave
 [Monferno]
 page = 40
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+base_hp = 6
+base_attack = 8
+base_defense = 5
+base_special_attack = 8
+base_special_defense = 5
+base_speed = 8
+types = Fire, Fighting
+basic_abilities = Blaze, Pickup
+advanced_abilities = Decoy, Iron Fist
+high_ability = Celebrate
+evolutions = Infernape,30
 minimum_level = 15
-diets = 
-habitats = 
-egg_groups = 
+diets = Omnivore
+habitats = Cave, Mountain
+egg_groups = Field, Humanshape
 gender_ratio_m = 87.5
-family = 
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+family = Chimchar, Monferno, Infernape
+capabilities = Overland:6, Swim:3, High Jump:2, Long Jump:3, Power:5, Firestarter, Heater, Glow, Naturewalk:Forest, Naturewalk:Mountain, Underdog
+height = 2'11",0.9m
+height_class = Small
+weight = 48.5 lbs.,22.0kg
+weight_class = 2
+skills = Athletics:4d6+2,Acrobatics:4d6+2,Combat:3d6,Stealth:3d6+2,Perception:3d6+2,Focus:2d6
+level_moves = 7:Ember, 9:Taunt, 15:Mach Punch, 16:Fury Swipes, 19:Flame Wheel, 26:Feint, 29:Torment, 36:Close Combat, 39:Fire Spin, 46:Acrobatics, 49:Slack Off, 56:Flare Blitz
 hm_moves = Cut,Strength
-tm_moves = 
+tm_moves = Hone Claws, Toxic, Bulk Up, Hidden Power, Sunny Day, Taunt, Protect, Frustration, Return, Dig, Brick Break, Double Team, Flamethrower, Fire Blast, Rock Tomb, Aerial Ace, Torment, Facade, Flame Charge, Rest, Attract, Low Sweep, Round, Overheat, Focus Blast, Fling, Incinerate, Will-O-Wisp, Acrobatics, Shadow Claw, Retaliate, Swords Dance, Rock Slide, Poison Jab, Grass Knot, Swagger, Sleep Talk, U-Turn, Substitute, Rock Smash, Power-Up Punch, Confide
 tutor_moves = Covet, Dual Chop, Endeavor, Fire Pledge, Fire Punch, Focus Punch, Gunk Shot, Heat Wave, Helping Hand, Iron Tail, Low Kick, Magic Coat, Mud-Slap, Rock Climb, Role Play, Rollout, Sleep Talk, Snore, Stealth Rock, Swift, Thunder Punch, Uproar, Vacuum Wave, Work Up
 [Infernape]
 page = 41
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+base_hp = 8
+base_attack = 10
+base_defense = 7
+base_special_attack = 10
+base_special_defense = 7
+base_speed = 10
+types = Fire, Fighting
+basic_abilities = Blaze, Pickup
+advanced_abilities = Decoy, Iron Fist
+high_ability = Celebrate
 minimum_level = 30
-diets = 
-habitats = 
-egg_groups = 
+diets = Omnivore
+habitats = Cave, Mountain
+egg_groups = Field, Humanshape
 gender_ratio_m = 87.5
-family = 
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+family = Chimchar, Monferno, Infernape
+capabilities = Overland:8, Swim:4, High Jump:3, Long Jump:4, Power:8, Firestarter, Heater, Glow, Naturewalk:Forest, Naturewalk:Mountain
+height = 3'11",1.2m
+height_class = Medium
+weight = 121.3 lbs.,55.0kg
+weight_class = 4
+skills = Athletics:5d6+2,Acrobatics:6d6+2,Combat:5d6,Stealth:4d6+2,Perception:3d6+3,Focus:3d6
+level_moves = 7:Ember, 9:Taunt, 15:Mach Punch, 16:Fury Swipes, 19:Flame Wheel, 26:Feint, 29:Punishment, 36:Close Combat, 42:Fire Spin, 52:Acrobatics, 58:Calm Mind, 68:Flare Blitz
 hm_moves = Cut,Strength
-tm_moves = 
+tm_moves = Hone Claws, Calm Mind, Roar, Toxic, Bulk Up, Hidden Power, Sunny Day, Taunt, Hyper Beam, Protect, Frustration, Solar Beam, Earthquake, Return, Dig, Brick Break, Double Team, Flamethrower, Fire Blast, Rock Tomb, Aerial Ace, Torment, Facade, Flame Charge, Rest, Attract, Low Sweep, Round, Overheat, Focus Blast, Fling, Incinerate, Will-O-Wisp, Acrobatics, Shadow Claw, Retaliate, Giga Impact, Stone Edge, Swords Dance, Bulldoze, Rock Slide, Poison Jab, Grass Knot, Swagger, Sleep Talk, U-Turn, Substitute, Rock Smash, Power-Up Punch, Confide
 tutor_moves = Blast Burn, Covet, Dual Chop, Endeavor, Fire Pledge, Fire Punch, Focus Punch, Gunk Shot, Heat Wave, Helping Hand, Iron Tail, Low Kick, Magic Coat, Mud-Slap, Rock Climb, Role Play, Rollout, Sleep Talk, Snore, Stealth Rock, Swift, Thunder Punch, Uproar, Vacuum Wave, Work Up
 [Tepig]
 page = 42
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+base_hp = 7
+base_attack = 6
+base_defense = 5
+base_special_attack = 5
+base_special_defense = 5
+base_speed = 5
+types = Fire
+basic_abilities = Blaze, Thick Fat
+advanced_abilities = Gluttony, Reckless
+high_ability = Bodyguard
+evolutions = Pignite,15
 minimum_level = 1
-diets = 
-habitats = 
-egg_groups = 
+diets = Herbivore
+habitats = Forest, Grassland, Mountain
+egg_groups = Field
 gender_ratio_m = 87.5
 average_hatch_rate_days = 10
-family = 
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+family = Tepig, Pignite, Emboar
+capabilities = Overland:5, Swim:2, High Jump:1, Long Jump:1, Power:2, Firestarter, Heater, Tracker, Naturewalk:Grassland, Underdog
+height = 1'8",0.5m
+height_class = Small
+weight = 21.8 lbs.,9.9kg
+weight_class = 1
+skills = Athletics:3d6+2,Acrobatics:2d6,Combat:2d6,Stealth:3d6,Perception:3d6,Focus:2d6
+level_moves = 1:Tackle, 3:Tail Whip, 7:Ember, 9:Odor Sleuth, 13:Defense Curl, 15:Flame Charge, 19:Smog, 21:Rollout, 25:Take Down, 27:Heat Crash, 31:Assurance, 33:Flamethrower, 37:Head Smash, 39:Roar, 43:Flare Blitz
 hm_moves = Strength
-tm_moves = 
+tm_moves = Roar, Toxic, Hidden Power, Sunny Day, Taunt, Protect, Frustration, Solar Beam, Return, Double Team, Flamethrower, Fire Blast, Rock Tomb, Facade, Flame Charge, Rest, Attract, Round, Echoed Voice, Overheat, Incinerate, Will-O-Wisp, Gyro Ball, Grass Knot, Swagger, Sleep Talk, Substitute, Wild Charge, Rock Smash
 egg_moves = Body Slam, Covet, Curse, Endeavor, Heavy Slam, Magnitude, Sleep Talk, Sucker Punch, Superpower, Thrash, Yawn
 tutor_moves = Covet, Endeavor, Fire Pledge, Heat Wave, Helping Hand, Iron Tail, Sleep Talk, Snore,
 Superpower
 [Pignite]
 page = 43
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+base_hp = 9
+base_attack = 9
+base_defense = 6
+base_special_attack = 7
+base_special_defense = 6
+base_speed = 6
+types = Fire, Fighting
+basic_abilities = Blaze, Thick Fat
+advanced_abilities = Gluttony, Reckless
+high_ability = Bodyguard
+evolutions = Emboar,30
 minimum_level = 15
-diets = 
-habitats = 
-egg_groups = 
+diets = Herbivore
+habitats = Cave, Grassland, Mountain
+egg_groups = Field
 gender_ratio_m = 87.5
-family = 
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+family = Tepig, Pignite, Emboar
+capabilities = Overland:6, Swim:3, High Jump:1, Long Jump:1, Power:4, Firestarter, Heater, Tracker, Naturewalk:Grassland, Underdog
+height = 3'3",1.0m
+height_class = Medium
+weight = 122.4 lbs.,55.5kg
+weight_class = 4
+skills = Athletics:4d6+2,Acrobatics:2d6,Combat:3d6,Stealth:3d6,Perception:3d6,Focus:3d6
+level_moves = 3:Tail Whip, 7:Ember, 9:Odor Sleuth, 13:Defense Curl, 15:Flame Charge, 17:Arm Thrust, 20:Smog, 23:Rollout, 28:Take Down, 31:Heat Crash, 36:Assurance, 39:Flamethrower, 44:Head Smash, 47:Roar, 52:Flare Blitz
 hm_moves = Strength
-tm_moves = 
+tm_moves = Roar, Toxic, Hidden Power, Sunny Day, Taunt, Protect, Frustration, Solar Beam, Return, Brick Break, Double Team, Flamethrower, Fire Blast, Rock Tomb, Facade, Flame Charge, Rest, Attract, Low Sweep, Round, Echoed Voice, Overheat, Focus Blast, Fling, Incinerate, Will-O-Wisp, Stone Edge, Gyro Ball, Bulldoze, Rock Slide, Poison Jab, Grass Knot, Swagger, Sleep Talk, Substitute, Wild Charge, Rock Smash, Power-Up Punch, Confide
 tutor_moves = Covet, Endeavor, Fire Pledge, Fire Punch, Heat Wave, Helping Hand, Iron Tail, Low Kick, Sleep Talk, Snore, Superpower, Thunder Punch, Work Up
 [Emboar]
 page = 44
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+base_hp = 11
+base_attack = 12
+base_defense = 7
+base_special_attack = 10
+base_special_defense = 7
+base_speed = 7
+types = Fire, Fighting
+basic_abilities = Blaze, Thick Fat
+advanced_abilities = Gluttony, Reckless
+high_ability = Bodyguard
 minimum_level = 30
-diets = 
-habitats = 
-egg_groups = 
+diets = Omnivore
+habitats = Cave, Grassland, Mountain
+egg_groups = Field
 gender_ratio_m = 87.5
-family = 
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+family = Tepig, Pignite, Emboar
+capabilities = Overland:7, Swim:4, High Jump:2, Long Jump:2, Power:8, Firestarter, Heater, Naturewalk:Grassland, Tracker
+height = 5'3",1.6m
+height_class = Medium
+weight = 330.7 lbs.,150.0kg
+weight_class = 5
+skills = Athletics:5d6+3,Acrobatics:2d6,Combat:4d6+3,Stealth:2d6,Perception:3d6,Focus:4d6
+level_moves = 3:Tail Whip, 7:Ember, 9:Odor Sleuth, 13:Defense Curl, 15:Flame Charge, 17:Arm Thrust, 20:Smog, 23:Rollout, 28:Take Down, 31:Heat Crash, 38:Assurance, 43:Flamethrower, 50:Head Smash, 55:Roar, 62:Flare Blitz
 hm_moves = Strength
-tm_moves = 
+tm_moves = Roar, Toxic, Bulk Up, Hidden Power, Sunny Day, Taunt, Hyper Beam, Protect, Frustration, Solar Beam, Smack Down, Earthquake, Return, Brick Break, Double Team, Flamethrower, Fire Blast, Rock Tomb, Facade, Flame Charge, Rest, Attract, Low Sweep, Round, Echoed Voice, Overheat, Focus Blast, Scald, Fling, Incinerate, Will-O-Wisp, Giga Impact, Stone Edge, Gyro Ball, Bulldoze, Rock Slide, Poison Jab, Grass Knot, Swagger, Sleep Talk, Substitute, Wild Charge, Rock Smash, Power-Up Punch, Confide
 tutor_moves = Blast Burn, Block, Covet, Endeavor, Fire Pledge, Fire Punch, Hammer Arm(N), Heat Wave, Helping Hand, Iron Head, Iron Tail, Low Kick, Sleep Talk, Snore, Superpower, Thunder Punch, Work Up
 [Fennekin]
 page = 45
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+base_hp = 4
+base_attack = 5
+base_defense = 4
+base_special_attack = 6
+base_special_defense = 6
+base_speed = 6
+types = Fire
+basic_abilities = Blaze, Forewarn
+advanced_abilities = Magician, Sorcery
+high_ability = Fox Fire
+evolutions = Braixen,15
 minimum_level = 1
-diets = 
-habitats = 
-egg_groups = 
+diets = Herbivore
+habitats = Forest, Grassland, Urban
+egg_groups = Field
 gender_ratio_m = 87.5
 average_hatch_rate_days = 10
-family = 
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+family = Fennekin, Braixen, Delphox
+capabilities = Overland:4, Swim:2, High Jump:1, Long Jump:2, Power:2, Firestarter, Naturewalk:Forest, Naturewalk:Grassland, Tracker, Underdog
+height = 1'04",0.4m
+height_class = Small
+weight = 20.7 lbs.,9.4kg
+weight_class = 1
+skills = Athletics:2d6,Acrobatics:2d6,Combat:2d6,Stealth:3d6,Perception:3d6+2,Focus:3d6+1
+level_moves = 1:Scratch, 1:Tail Whip, 5:Ember, 11:Howl, 14:Flame Charge, 17:Psybeam, 20:Fire Spin, 25:Lucky Chant, 31:Psyshock, 34:Flamethrower, 38:Will-O-Wisp, 41:Psychic, 43:Sunny Day, 46:Magic Room, 48:Fire Blast
 hm_moves = Cut
-tm_moves = 
+tm_moves = Psyshock, Toxic, Hidden Power, Sunny Day, Light Screen, Protect, Rain Dance, Safeguard, Solar Beam, Return, Psychic, Double Team, Flamethrower, Fire Blast, Facade, Flame Charge, Rest, Attract, Thief, Round, Echoed Voice, Overheat, Incinerate, Will-O-Wisp, Embargo, Psych Up, Dream Eater, Grass Knot, Swagger, Sleep Talk, Substitute, Power-Up Punch, Confide
 egg_moves = Heat Wave, Hypnosis, Magic Coat, Wish
 tutor_moves = Covet, Fire Pledge, Foul Play, Heat Wave, Iron Tail, Magic Coat, Magic Room, Snore
 [Braixen]
 page = 46
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+base_hp = 6
+base_attack = 6
+base_defense = 6
+base_special_attack = 9
+base_special_defense = 7
+base_speed = 7
+types = Fire
+basic_abilities = Blaze, Forewarn
+advanced_abilities = Magician, Sorcery
+high_ability = Fox Fire
+evolutions = Delphox,30
 minimum_level = 15
-diets = 
-habitats = 
-egg_groups = 
+diets = Herbivore
+habitats = Forest, Grassland, Urban
+egg_groups = Field
 gender_ratio_m = 87.5
-family = 
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+family = Fennekin, Braixen, Delphox
+capabilities = Overland:6, Swim:2, High Jump:2, Long Jump:2, Power:3, Firestarter, Naturewalk:Forest, Naturewalk:Grassland, Tracker, Underdog
+height = 3'03",1.0m
+height_class = Medium
+weight = 32.0 lbs.,14.5kg
+weight_class = 2
+skills = Athletics:2d6,Acrobatics:2d6,Combat:3d6,Stealth:3d6,Perception:4d6+2,Focus:4d6+1
+level_moves = 1:Scratch, 1:Tail Whip, 5:Ember, 11:Howl, 14:Flame Charge, 18:Psybeam, 22:Fire Spin, 27:Lucky Chant, 30:Light Screen, 34:Psyshock, 41:Flamethrower, 45:Will-O-Wisp, 48:Psychic, 51:Sunny Day, 53:Magic Room, 55:Fire Blast
 hm_moves = Cut
-tm_moves = 
+tm_moves = Psyshock, Toxic, Hidden Power, Sunny Day, Light Screen, Protect, Rain Dance, Safeguard, Solar Beam, Return, Psychic, Double Team, Flamethrower, Fire Blast, Facade, Flame Charge, Rest, Attract, Thief, Round, Echoed Voice, Overheat, Incinerate, Will-O-Wisp, Embargo, Psych Up, Dream Eater, Grass Knot, Swagger, Sleep Talk, Substitute, Power-Up Punch, Confide
 tutor_moves = Covet, Fire Pledge, Fire Punch, Foul Play, Heat Wave, Iron Tail, Low Kick, Magic Coat, Magic Room, Recycle, Shock Wave, Skill Swap, Snatch, Snore, Thunder Punch, Trick, Wonder Room, Zen Headbutt
 [Delphox]
 page = 47
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
+base_hp = 8
+base_attack = 7
+base_defense = 7
+base_special_attack = 11
+base_special_defense = 10
+base_speed = 10
+types = Fire, Psychic
+basic_abilities = Blaze, Forewarn
+advanced_abilities = Magician, Sorcery
+high_ability = Fox Fire
 minimum_level = 30
-diets = 
-habitats = 
-egg_groups = 
+diets = Herbivore
+habitats = Forest, Grassland, Urban
+egg_groups = Field
 gender_ratio_m = 87.5
-family = 
-capabilities = 
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+family = Fennekin, Braixen, Delphox
+capabilities = Overland:7, Swim:4, High Jump:2, Long Jump:2, Power:4, Firestarter, Naturewalk:Forest, Naturewalk:Grassland, Telekinesis, Telepath, Tracker
+height = 4'11",1.5m
+height_class = Medium
+weight = 86.0 lbs.,39.0kg
+weight_class = 3
+skills = Athletics:3d6,Acrobatics:2d6,Combat:4d6,Stealth:3d6,Perception:4d6+2,Focus:5d6+2
+level_moves = 1:Scratch, 1:Tail Whip, 5:Ember, 11:Howl, 14:Flame Charge, 18:Psybeam, 22:Fire Spin, 27:Lucky Chant, 30:Light Screen, 30:Mystical Fire, 34:Psyshock, 42:Flamethrower, 47:Will-O-Wisp, 51:Psychic, 55:Sunny Day, 58:Magic Room, 61:Fire Blast, 69:Future Sight
 hm_moves = Cut
-tm_moves = 
-egg_moves = 
+tm_moves = Psyshock, Calm Mind, Toxic, Hidden Power, Sunny Day, Hyper Beam, Light Screen, Protect, Rain Dance, Safeguard, Solar Beam, Return, Psychic, Double Team, Flamethrower, Fire Blast, Facade, Flame Charge, Rest, Attract, Thief, Round, Echoed Voice, Overheat, Incinerate, Will-O-Wisp, Embargo, Giga Impact, Psych Up, Dream Eater, Grass Knot, Swagger, Sleep Talk, Substitute, Trick Room, Power-Up Punch, Confide
 tutor_moves = Blast Burn, Covet, Fire Pledge, Fire Punch, Foul Play, Future Sight (N),Heat Wave, Iron Tail, Low Kick, Magic Coat, Magic Room, Recycle, Roleplay (N), Shock Wave, Skill Swap, Snatch, Snore, Switcheroo (N), Thunder Punch, Trick, Wonder Room, Zen Headbutt
 [Squirtle]
 page = 48
